--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Julián Sotelo | Ingeniero Multimedia</title>
+  <meta name="author" content="Julián Sotelo">
+  <meta name="subject" content="Website personal">
+  <meta name="description" content="Ingeniero Multimedia">
+  <meta name="pagename" content="Julián Sotelo"> 
   <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="dist/css/home.css"/> -->
